--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
  - type: web
    name: inventory-service
-   env: java
+   runtime: java
    buildCommand: "./mvnw clean install"
    startCommand: "java -jar target/*.jar"
    envVars: 
