--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@
 services:
  - type: web
    name: inventory-service
+   runtime: docker
    buildCommand: "./mvnw clean install"
    startCommand: "java -jar target/*.jar"
    envVars: 
