--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: inventory-service
-    runtime: docker
+    env: java
     plan: free
     buildCommand: "./mvnw clean install"
     startCommand: "java -jar target/*.jar"
